--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Harprt Dhanoa",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "generate-key": "^0.0.6",
     "pg": "^8.7.3"
