--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "User Session Id is provided back",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "Harprt Dhanoa",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "express": "^4.17.3",
     "generate-key": "^0.0.6",
     "pg": "^8.7.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
